Backport Errorprone Config Changes for JDK 16 (#2665)